fixat asset() och navbar

--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=e744316e7385e9ca85d2046b1ce80e3b
+APP_SECRET=647a7e54eb2ac3cb1ca6745a38ca8241
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-meta ###
@@ -39,5 +39,5 @@ DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+# MAILER_DSN=null://null
 ###< symfony/mailer ###
