--- a/composer.json
+++ b/composer.json
@@ -86,6 +86,11 @@
         "phpmd": "tools/phpmd/vendor/bin/phpmd src text phpmd.xml || true",
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 9 src || true",
         "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
+        "fix": [
+            "@csfix",
+            "@phpcbf",
+            "@phpcs"
+        ],
         "lint": [
             "@phpcpd",
             "@phpmd",
