--- a/composer.json
+++ b/composer.json
@@ -83,6 +83,9 @@
         "csfix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix src",
         "phpcs": "tools/php-codesniffer/vendor/bin/phpcs --standard=PSR12 src",
         "phpcbf": "tools/php-codesniffer/vendor/bin/phpcbf --standard=PSR12 src",
+        "csfixTest": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix tests",
+        "phpcsTest": "tools/php-codesniffer/vendor/bin/phpcs --standard=PSR12 tests",
+        "phpcbfTest": "tools/php-codesniffer/vendor/bin/phpcbf --standard=PSR12 tests",
         "phpmd": "tools/phpmd/vendor/bin/phpmd src text phpmd.xml || true",
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 9 src || true",
         "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
@@ -92,6 +95,11 @@
             "@csfix",
             "@phpcbf",
             "@phpcs"
+        ],
+        "fixTest": [
+            "@csfixTest",
+            "@phpcbfTest",
+            "@phpcsTest"
         ],
         "lint": [
             "@phpcpd",
