--- a/composer.json
+++ b/composer.json
@@ -91,7 +91,7 @@
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 9 src || true",
         "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
         "phpdoc": "tools/phpdoc/phpdoc",
-        "phpunit": "XDEBUG_MODE=coverage bin/phpunit",
+        "phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit",
         "fix": [
             "@csfix",
             "@phpcbf",
